css quick fix on genres overflow

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -106,6 +106,11 @@ a{
 .musician-box-genres{
     font-size: 11px;
     font-style: italic;
+    text-overflow: ellipsis;
+    width: 200px;
+    white-space: nowrap;
+    display: inline-block;
+    overflow: hidden;
 }
 
 .form-signin {
